@@ -1,3 +1,7 @@
+2004-02-08  pottendo  <pottendo@utanet.at>
+
+	* Makefile.in.in (gettextsrcdir): Refixed DESTDIR.
+
 2004-01-21  pottendo  <pottendo@utanet.at>
 
 	* de.po: Updated.
